# VELOCIS

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
electron/: main.mjs  preload.cjs
src/: App.tsx  app.rs  index.css  main.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/components/: AppBar.tsx  Editor.tsx  Home.tsx  MediaPanel.tsx  Preview.tsx  Timeline.tsx
src/core/: mod.rs  persistence.rs  project.rs  state.rs
src/hooks/: usePreviewRenderer.ts
src/lib/: wasm-bridge.ts
src/store/: media.ts  project.ts  timeline.ts
src/ui/: command.rs  home.rs  layout.rs  mod.rs  theme.rs
src/ui/panels/: media.rs
src/ui/timeline/: mod.rs
