[package]
name = "velocis"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints.rust]
unused = "deny"
nonstandard_style = "deny"
future_incompatible = "warn"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
clone_on_copy = { level = "deny", priority = 8 }
large_enum_variant = { level = "warn", priority = 5 }
