[package]
name = "velocis-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "console",
] }
js-sys = "0.3"
